@@ -7,6 +7,7 @@ import org.slf4j.LoggerFactory;
 
 import java.util.LinkedList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -47,7 +48,6 @@ public class InMemoryLogAppender extends AppenderBase<ILoggingEvent> {
     private List<String> getMessages() {
         return events.stream()
                 .map(ILoggingEvent::getFormattedMessage)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
-
